guacamole: changed secret and hostname

--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -9,15 +9,15 @@ metadata:
         meta.helm.sh/release-name: guacamole
         meta.helm.sh/release-namespace: guacamole
 stringData:
-    postgresPassword: ENC[AES256_GCM,data:48ee0TkPhuOqgL6SGroJpt9hYI8SsjCfAgS1bnndM6qXgJ9FQ8o12NIItNZT,iv:Nkluf2qbiSv0RANTdo8P5jiP63A2u/P7lFx/UkG03yI=,tag:SsjA0RA1ckh3RJA89k06Yw==,type:str]
-    GUACD_HOSTNAME: ENC[AES256_GCM,data:wpvOoftOWNCOIsA9c2s4,iv:WwfK9IqiJuTgtKmS9WB39U6zQnKluO28EgY0xcR58iE=,tag:epQAXq7XPwPuQqrBVLTJoQ==,type:str]
-    GUACD_PORT: ENC[AES256_GCM,data:n+IvIw==,iv:R3NbCOAQIniGi/0nrCPh2A2FmXUJJXsCyyoljzDhvqE=,tag:UghPX2VhWNnvQAZK/wPL2A==,type:str]
-    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:pE4h+IKc+K8oHg==,iv:C5+4rdhZ8hSWP4NW8kMcUiu2nq8ViiASgJIjUIcn3Ho=,tag:3FQT2oRATpmqd3M/wj0lNg==,type:str]
-    POSTGRES_PORT: ENC[AES256_GCM,data:gVodpg==,iv:HGKa5ck12sT3KwGQHiLk8GPelA0sRNlxXDpqkzv0b5o=,tag:yHxOe6bfWFJ1RbnytoA77w==,type:str]
-    POSTGRES_DATABASE: ENC[AES256_GCM,data:6MfbH+OHb/C6,iv:j6undlfYtvjfFFxPs+nSCV+7CN7dKEKLJ3v1BrqVPgk=,tag:+Jl3CMkAJr5SW54cIhN9yA==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:BEc4QnO+EHuU,iv:KXyi0rVF7LY11dPiDcAlK5mSHfG+0IDgyspmBSEzbVw=,tag:arFfr4fVtY+S9Yo6UIDj1g==,type:str]
-    WEBAPP_CONTEXT: ENC[AES256_GCM,data:7y0AAA==,iv:EO238gvHiiX6RDtm/2ZidcwzkwV4jBoNiHl3RkZ+z/8=,tag:t+4MGG6/q5iy0qBW6s0tRg==,type:str]
-    TOTP_ENABLED: ENC[AES256_GCM,data:Ob1swQ==,iv:XfJJVIMEq5Nrk+pt9BSoGp6U1aYNSv412UnpXcWls8k=,tag:swrAwT2vJ8gug628tpGNTA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:+nE5zG1nBo0tVXiRdLmdptm8MYABw6vbCWFBin3r+BgRVlxMm/T2qP3i0r5A,iv:aTm+YSo1l2Ns8vJRyqxal/shEj/y8QKfAqhjBXRjsRA=,tag:+4XxjG+67BLqpU4IoxKeCg==,type:str]
+    GUACD_HOSTNAME: ENC[AES256_GCM,data:g8xt/D5K1w+76cDXnwOs,iv:B3L6ggo0RO9/ZpsF+jCzrViTGDouvseUZxqtJ0aO8hc=,tag:vjMVFpB2Upue3kAZchCdyg==,type:str]
+    GUACD_PORT: ENC[AES256_GCM,data:+mJZ6Q==,iv:jTqeaOHggGg+6bCLEb0SHF3AQigLKDqWZcm24C7lZ7c=,tag:j3ThGRr5j6cOHzVBpBdfYg==,type:str]
+    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:DqAfC3l9esN4sg==,iv:z/yfFiDW8vBmwzDoR2E9bQXx8QrAYb+52vYaO4mSSHU=,tag:HfhUkBUxhGlCW0yN3w1DwA==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:Iflt4w==,iv:m9q4OVQ76f+0aNT5PxUucyyU66aLuqjqrXk6/l7gKbE=,tag:QUvqHLIJMjbMy0VasUbYdw==,type:str]
+    POSTGRES_DATABASE: ENC[AES256_GCM,data:v8S/5DYLkkeP,iv:ezxv2WDqdQPAy0qExWGwPNFmcdkhfDR1gFAGFKTOeqI=,tag:BvBsaJzizfZuzAyHlt01Tg==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:KEf2tB6UIr+2,iv:25Q7S7Kl33vgYXUaDd39cRzRx8OLXdjE85M/SVnhigk=,tag:6I5MaqTl0BYDQiZ8Mt1Drw==,type:str]
+    WEBAPP_CONTEXT: ENC[AES256_GCM,data:iV32vQ==,iv:/AyFvf6VNOA72lAHUrNa2SBl4M6qcS5buh+BGmey/Dg=,tag:USlT3DctnvbpcK8GxcRgQA==,type:str]
+    TOTP_ENABLED: ENC[AES256_GCM,data:QnisDQ==,iv:FHTpndax4PKXrqf4tS9tv9UuKzr/Ux/x7LbdseYVW28=,tag:B29IoxReJ+r+UT521x9crA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,14 +27,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtZ3l5cTVyMTRER3pvTysx
-            dzVNbk1mMUVOaVNWWEIwOENLM0FtRDlNSzBrCnpYVWJYYWdzd20rMXNNc0lVY2Jt
-            Rmo2Z3daeHhXRyt4S0MyNWdQcVhmbjgKLS0tIGhQc092S2JDMGlqdWUwSWJiZGpo
-            Y2lXK3N2K1ZnV1BlUVVxTW5ON3FUWlUKUIzVQUtZaXqfP1QuIPFA7HqkqDhdCNNr
-            PS9PkBiHw+LfhftRHz7jxGMAeqvnidWTkyXB8+ft+1EjU7fTHxQWJA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDVEhOVFcrdWJsbG1TdWZS
+            c3hUWVFMdXp2WU5BRUwraTlWblQxWmhIaVI4Cmlia0c1ZnkvbGZFVGR5WVg2K1dN
+            QXVHLzJiSEIxbEtGbjJsVk1NcmpQWWMKLS0tIGRVZ1BORjh1OFZyOUtaWUpUbHNI
+            N1lCd0xidmVRcVRWbUJNUHA0RFZ3eFUKuQQWLdjVPS5DzpcCaH87KueUQcJM21Pk
+            +riAkkjE+eSW3qc8TKYGUvQJE/u/W3Ci9rOKG5I8v4B5AxC7QcfJ/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-19T11:58:43Z"
-    mac: ENC[AES256_GCM,data:At65BU2ZMPvODqXVmMe78F4AhTgX+6vXbqPi5xvzUUO6ELRlxvOYab2UH1xjRxI8n5iVqBanAOlzd7w3RcxYvOigA5VbL5RwKBd98fUb9udZ5L6/lNwL1GMJIHCQ0D9osYUPMHOOzB2II16NJTeDtmNrY5NblPlBg/Weg76yBCU=,iv:cxp5v0C5n2QY1qh7/+IPTZwdxZm7u6i+s0wRrYXHkz8=,tag:TRT00rZJ50XRmmhhNjbDUQ==,type:str]
+    lastmodified: "2024-12-19T12:40:54Z"
+    mac: ENC[AES256_GCM,data:j9h7tPxPgdwSCW0bVOcfGY1LF23IDBS/vOyMK3IDv7+X1G4K18AzeE4JHmmrFTAPMPtGaaJw4Lfs5bJs/zPNZX7f9pnisQ+kJqjBHnJWMzec71bmd9Cxh8qTQKp0fsvrwveMiIQTXY+KL0it982wDh0cYCKpBp8StE4fZqWMGPM=,iv:+PzdixufU7ka3Jc25JlUtgZ0lWvKoF1NrCfrwbMVqVc=,tag:YmEhtYRv+/C7ptz+xCfNxA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
