--- a/apps/base/guacamole/manifest.yaml
+++ b/apps/base/guacamole/manifest.yaml
@@ -52,7 +52,7 @@ spec:
       settings:
         TOTP_ENABLED: "true"
     postgres:
-      hostname: "postgresql"
+      hostname: "guacamole-postgres-cluster-rw "
       port: "5432"
       database: "guacamole"
       user: "guacamole"
