guacamole: changed secret.

--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -9,15 +9,15 @@ metadata:
         meta.helm.sh/release-name: guacamole
         meta.helm.sh/release-namespace: guacamole
 stringData:
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:+nE5zG1nBo0tVXiRdLmdptm8MYABw6vbCWFBin3r+BgRVlxMm/T2qP3i0r5A,iv:aTm+YSo1l2Ns8vJRyqxal/shEj/y8QKfAqhjBXRjsRA=,tag:+4XxjG+67BLqpU4IoxKeCg==,type:str]
-    GUACD_HOSTNAME: ENC[AES256_GCM,data:g8xt/D5K1w+76cDXnwOs,iv:B3L6ggo0RO9/ZpsF+jCzrViTGDouvseUZxqtJ0aO8hc=,tag:vjMVFpB2Upue3kAZchCdyg==,type:str]
-    GUACD_PORT: ENC[AES256_GCM,data:+mJZ6Q==,iv:jTqeaOHggGg+6bCLEb0SHF3AQigLKDqWZcm24C7lZ7c=,tag:j3ThGRr5j6cOHzVBpBdfYg==,type:str]
-    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:DqAfC3l9esN4sg==,iv:z/yfFiDW8vBmwzDoR2E9bQXx8QrAYb+52vYaO4mSSHU=,tag:HfhUkBUxhGlCW0yN3w1DwA==,type:str]
-    POSTGRES_PORT: ENC[AES256_GCM,data:Iflt4w==,iv:m9q4OVQ76f+0aNT5PxUucyyU66aLuqjqrXk6/l7gKbE=,tag:QUvqHLIJMjbMy0VasUbYdw==,type:str]
-    POSTGRES_DATABASE: ENC[AES256_GCM,data:v8S/5DYLkkeP,iv:ezxv2WDqdQPAy0qExWGwPNFmcdkhfDR1gFAGFKTOeqI=,tag:BvBsaJzizfZuzAyHlt01Tg==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:KEf2tB6UIr+2,iv:25Q7S7Kl33vgYXUaDd39cRzRx8OLXdjE85M/SVnhigk=,tag:6I5MaqTl0BYDQiZ8Mt1Drw==,type:str]
-    WEBAPP_CONTEXT: ENC[AES256_GCM,data:iV32vQ==,iv:/AyFvf6VNOA72lAHUrNa2SBl4M6qcS5buh+BGmey/Dg=,tag:USlT3DctnvbpcK8GxcRgQA==,type:str]
-    TOTP_ENABLED: ENC[AES256_GCM,data:QnisDQ==,iv:FHTpndax4PKXrqf4tS9tv9UuKzr/Ux/x7LbdseYVW28=,tag:B29IoxReJ+r+UT521x9crA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:iOzkrG884Pi4oSS7aqJtEWEiNWLKkzxs3B9rIXX1xJv3Bpqum+Vrv5Pc34gt,iv:EHPdqHuxisUZg2oPR/TiAmqGXVmi2jk/eEesLyQw+48=,tag:TbZjp2rjS8r6yuPV64xnyQ==,type:str]
+    GUACD_HOSTNAME: ENC[AES256_GCM,data:xlEXh+eYrZkitxsEw/4f,iv:OYqvcFrjLkiYH2ow/RPQrWY6QIhDKZIzsVtfRbyY64M=,tag:XM4ohxmrXkDhfSHNROY2IA==,type:str]
+    GUACD_PORT: ENC[AES256_GCM,data:33XnnQ==,iv:viKgB0Ry4pm5kfTSJqzhIJUkblRNXotJMdivI1shSuM=,tag:4Ue9nzhyVKaaFmcppuFB6Q==,type:str]
+    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:md4JXla5NSAR0hD+oNGktci2knUlV7FCtabNleE=,iv:nu5fy/ur0xLcZJ+gVoXha5+1TyqfdbGQHFkGcAiAkSw=,tag:/PwKBfoC5BG3zAzywpFsOQ==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:tosF8A==,iv:NOdgShdZzIrxI8Z5ntxZPyNzVz43+fPuvJ5hNR9e0fw=,tag:91k3UxIF0hs5TzyG80DilA==,type:str]
+    POSTGRES_DATABASE: ENC[AES256_GCM,data:fVNKZ+adbZr6,iv:1XTe+agZ46aAf2dZAFI3w+m0GQ6y0+CHk7NHX6KBkEQ=,tag:I66/PpdPsOhFVQPvQvNNNA==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:Btvs55OktxNb,iv:2rm+Tc9JnLNjdDIyfQ9gwWdilXpKAK4Q+XJ2nxDn9kI=,tag:1cHs/nO5fmVUlcw1e9OVyg==,type:str]
+    WEBAPP_CONTEXT: ENC[AES256_GCM,data:NCTiHA==,iv:OLtV6QhgDyfVvte1HvCnZbS5AulyJRSWgRR851fazJE=,tag:DYZqUS+kt4f+8I0oxPSWyg==,type:str]
+    TOTP_ENABLED: ENC[AES256_GCM,data:/W4Acw==,iv:bZw72yLRsHFJZ5CWDageNZ9+HubdrOoD5ogzeM4mV4Y=,tag:y9yEUaNf/ERhbKsbbxVtcw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,14 +27,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDVEhOVFcrdWJsbG1TdWZS
-            c3hUWVFMdXp2WU5BRUwraTlWblQxWmhIaVI4Cmlia0c1ZnkvbGZFVGR5WVg2K1dN
-            QXVHLzJiSEIxbEtGbjJsVk1NcmpQWWMKLS0tIGRVZ1BORjh1OFZyOUtaWUpUbHNI
-            N1lCd0xidmVRcVRWbUJNUHA0RFZ3eFUKuQQWLdjVPS5DzpcCaH87KueUQcJM21Pk
-            +riAkkjE+eSW3qc8TKYGUvQJE/u/W3Ci9rOKG5I8v4B5AxC7QcfJ/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGNW5yYncrWXJrUWhOUjlU
+            bGtZa3ZaZE0wWmg1dHhtRmpYdUZncGI1RWhNCmhpa29PRS9HYlFsdlFDMjBnSzRa
+            b1JjZmhoeURxVFdpQXRRYnVzbDNaencKLS0tIHZMcVpuVXVaSU10ZjVxU2J3OXRE
+            OFpxSGVSQVVBSVp4bk0zQ0ZheUYyZWcKvTi0wvCoRQbaQAtmlRsXJUprC29412Ld
+            wUxnmEIgpa8p+nOcZcbiv9+urRBqBS6IOw3H92pQ1+lyJ1f4EsuDFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-19T12:40:54Z"
-    mac: ENC[AES256_GCM,data:j9h7tPxPgdwSCW0bVOcfGY1LF23IDBS/vOyMK3IDv7+X1G4K18AzeE4JHmmrFTAPMPtGaaJw4Lfs5bJs/zPNZX7f9pnisQ+kJqjBHnJWMzec71bmd9Cxh8qTQKp0fsvrwveMiIQTXY+KL0it982wDh0cYCKpBp8StE4fZqWMGPM=,iv:+PzdixufU7ka3Jc25JlUtgZ0lWvKoF1NrCfrwbMVqVc=,tag:YmEhtYRv+/C7ptz+xCfNxA==,type:str]
+    lastmodified: "2024-12-19T13:18:58Z"
+    mac: ENC[AES256_GCM,data:+G9fu7OxDWeqt+3ONgg83uXpEpy1bHN2fdcWiV/wEQNkw66cZ0RVg31ObBmR5Qv83WLkuMSDStLsT70WJO9u0zIlQNDcRG0S3dV2FQ6+pRMDUzbO99BA/pHzoO75aLA6kY6D7H+iYg3Hw2Q4HeHVGiFHlfDx/gC6SHf1ZK5sScU=,iv:VQJabkErvB3I5Hc0xOxDg7SpAVMVCow2sQKf161WZ3M=,tag:VHzn0lc13YGd+o4JpyzXlg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
