--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -16,7 +16,7 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: "66.x.x"
+      version: "67.0.0"
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
