--- a/clusters/production/monitoring.yaml
+++ b/clusters/production/monitoring.yaml
@@ -12,8 +12,8 @@ spec:
     secretRef:
       name: sops-age
   interval: 1h
-  retryInterval: 1h
-  timeout: 2h
+  retryInterval: 1m
+  timeout: 30m
   prune: true
   wait: true
   sourceRef:
@@ -34,8 +34,8 @@ spec:
   dependsOn:
     - name: monitoring-controllers
   interval: 1h
-  retryInterval: 1h
-  timeout: 2h
+  retryInterval: 1m
+  timeout: 30m
   prune: true
   wait: true
   sourceRef:
