--- a/clusters/production/monitoring.yaml
+++ b/clusters/production/monitoring.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: monitoring-controllers
+  name: monitoring-controllerz
   namespace: flux-system
 spec:
   dependsOn:
@@ -32,7 +32,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: monitoring-controllers
+    - name: monitoring-controllerz
   interval: 1h
   retryInterval: 1m
   timeout: 30m
@@ -54,7 +54,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: monitoring-controllers
+    - name: monitoring-controllerz
     - name: traefik-config
   interval: 1h
   retryInterval: 1h
