grafana: Disabled default dashboards, but saved the cluster metrics dashboard.

--- a/monitoring/configs/kustomization.yaml
+++ b/monitoring/configs/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: monitoring
 resources:
   - podmonitor.yaml
   - servicemonitor.yaml
+  - prometheus-rules.yaml
 configMapGenerator:
   - name: flux-grafana-dashboards
     files:
@@ -12,6 +13,7 @@ configMapGenerator:
       - dashboards/logs.json
       - dashboards/traefik-official-standalone-dashboard-rev9.json
       - dashboards/longhorn.json
+      - dashboards/kube-cluster-default.json
     options:
       labels:
         grafana_dashboard: "1"
