--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -70,6 +70,9 @@ spec:
                 requests:
                   storage: 10Gi
     grafana:
+      grafana.ini:
+        dashboards:
+          default_home_dashboard_path: /tmp/dashboards/kube-cluster-default.json
       defaultDashboardsEnabled: false
       admin:
         existingSecret: "grafana-secret"
