--- a/infrastructure/base/velero/manifest.yaml
+++ b/infrastructure/base/velero/manifest.yaml
@@ -56,6 +56,11 @@ spec:
       limits:
         cpu: 1000m
         memory: 512Mi
+    metrics:
+      serviceMonitor:
+        enabled: true
+        additionalLabels:
+          release: kube-prometheus-stack
     configuration:
       features: EnableCSI
       backupStorageLocation:
