unbound: switched to custom servicemonitor
The servicemonitor, created by the helm chart, had not the right labels.

removed unused metadata

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -40,10 +40,6 @@ spec:
   values:
     metrics:
       enabled: true
-    serviceMonitor:
-      enabled: true
-      annotations:
-        release: kube-prometheus-stack
     containers:
       unbound:
         config:
@@ -75,5 +71,30 @@ spec:
             memory: 10Mi
     service:
       type: LoadBalancer
-
-
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  annotations:
+    meta.helm.sh/release-name: unbound
+    meta.helm.sh/release-namespace: unbound
+  labels:
+    release: kube-prometheus-stack
+    app.kubernetes.io/instance: unbound
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: unbound
+    helm.toolkit.fluxcd.io/name: unbound
+    helm.toolkit.fluxcd.io/namespace: unbound
+  name: unbound
+  namespace: unbound
+spec:
+  endpoints:
+  - path: /metrics
+    targetPort: metrics
+  namespaceSelector:
+    matchNames:
+    - unbound
+  selector:
+    matchLabels:
+      app.kubernetes.io/instance: unbound
+      app.kubernetes.io/name: unbound
