--- a/infrastructure/base/cert-manager/manifest.yaml
+++ b/infrastructure/base/cert-manager/manifest.yaml
@@ -31,3 +31,8 @@ spec:
       interval: 12h
   values:
     installCRDs: true
+    prometheus:
+      servicemonitor:
+        enabled: true
+        labels:
+          release: kube-prometheus-stack
