cloudnative-pg: enabled podmonitor and grafana dashboard

--- a/infrastructure/base/cloudnative-pg/manifest.yaml
+++ b/infrastructure/base/cloudnative-pg/manifest.yaml
@@ -38,4 +38,9 @@ spec:
         namespace: cloudnative-pg
       interval: 12h
   values:
+    monitoring:
+      podMonitorEnabled: true
+      grafanaDashboard:
+        create: true
+        namespace: monitoring
 
