--- a/infrastructure/base/metallb/manifest.yaml
+++ b/infrastructure/base/metallb/manifest.yaml
@@ -49,3 +49,6 @@ spec:
         controller:
           additionalLabels:
             release: kube-prometheus-stack
+      # the service account used by prometheus
+      # required when " .Values.prometheus.rbacPrometheus == true " and " .Values.prometheus.podMonitor.enabled=true or prometheus.serviceMonitor.enabled=true "
+      serviceAccount: kube-prometheus-stack-prometheus
