--- a/infrastructure/base/metallb/manifest.yaml
+++ b/infrastructure/base/metallb/manifest.yaml
@@ -52,3 +52,4 @@ spec:
       # the service account used by prometheus
       # required when " .Values.prometheus.rbacPrometheus == true " and " .Values.prometheus.podMonitor.enabled=true or prometheus.serviceMonitor.enabled=true "
       serviceAccount: kube-prometheus-stack-prometheus
+      namespace: monitoring
