velero: defined snapshot location.
velero: fixed missconfig

--- a/infrastructure/production/velero/config/schedule.yaml
+++ b/infrastructure/production/velero/config/schedule.yaml
@@ -7,6 +7,8 @@ spec:
   schedule: 0 */10 * * *
   skipImmediately: false
   template:
+    volumeSnapshotLocations:
+      - minio
     csiSnapshotTimeout: 30m
     hooks: {}
     includedNamespaces:
