--- a/infrastructure/production/traefik/config/external-services/homeassistant-ingress.yaml
+++ b/infrastructure/production/traefik/config/external-services/homeassistant-ingress.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: homeassistant
+  name: homeassistant-ing
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: james-vandelocht-uk
-  namespace: homeassistant
+  namespace: homeassistant-ing
 spec:
   secretName: james-vandelocht-uk-production-tls
   issuerRef:
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: homeassistant-service
-  namespace: homeassistant
+  namespace: homeassistant-ing
 spec:
   ClusterIP: None
   ports:
@@ -34,7 +34,7 @@ apiVersion: v1
 kind: Endpoints
 metadata:
   name: homeassistant-service
-  namespace: homeassistant
+  namespace: homeassistant-ing
 subsets:
   - addresses:
       - ip: 192.168.178.44
@@ -46,7 +46,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: home-assistant-ingress
-  namespace: homeassistant
+  namespace: homeassistant-ing
   annotations: 
     kubernetes.io/ingress.class: traefik-external
 spec:
