--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -147,3 +147,27 @@ spec:
   path: ./apps/production/forgejo
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: homeassistant
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: longhorn-config
+    - name: traefik-config
+    - name: cert-manager-config
+  interval: 1h
+  retryInterval: 1m
+  timeout: 60m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/homeassistant
+  prune: true
+  wait: true
