--- a/apps/base/homeassistant/manifest.yaml
+++ b/apps/base/homeassistant/manifest.yaml
@@ -38,10 +38,10 @@ spec:
         namespace: homeassistant
       interval: 12h
   values:
-    # # Environment variables
-    # env:
-    #   - name: TZ
-    #     value: Europe/Berlin
+    # Environment variables
+    env:
+      - name: TZ
+        value: Europe/Berlin
     # # resources:
     # #   # We usually recommend not to specify default resources and to leave this as a conscious
     # #   # choice for the user. This also increases chances charts run on environments with little
