--- a/apps/production/homeassistant/kustomization.yaml
+++ b/apps/production/homeassistant/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/homeassistant
+  - ./ingressConfig.yaml
 
 patches:
   - path: patch.yaml
