--- a/apps/base/homeassistant/manifest.yaml
+++ b/apps/base/homeassistant/manifest.yaml
@@ -73,6 +73,13 @@ spec:
         # Loads default set of integrations. Do not remove.
         default_config:
 
+        http:
+          use_x_forwarded_for: true
+          trusted_proxies:
+            - 10.0.0.0/8
+            - 172.16.0.0/12
+            - 192.168.0.0/16
+            - 127.0.0.0/8
         {{- if .Values.ingress.enabled }}
         http:
           use_x_forwarded_for: true
