--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -23,6 +23,13 @@ spec:
     spec:
       containers:
       - name: filen-cli-webdav
+        resources:
+            requests:
+              memory: "80Mi"
+              cpu: "250m"
+            limits:
+              memory: "100Mi"
+              cpu: "500m"
         env:
           - name: W_USER
             valueFrom:
@@ -44,6 +51,13 @@ spec:
           - mountPath: /root/.config/filen-cli/
             name: filen-cli-webdav-claim
       - name: filen-cli-s3
+        resources:
+            requests:
+              memory: "80Mi"
+              cpu: "250m"
+            limits:
+              memory: "100Mi"
+              cpu: "500m"
         env:
           - name: S3_ACCESS_KEY_ID
             valueFrom:
