--- a/monitoring/controllers/influxdb/manifest.yaml
+++ b/monitoring/controllers/influxdb/manifest.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   interval: 5m0s
-  url: influxdata https://helm.influxdata.com/
+  url: https://helm.influxdata.com/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
