--- a/monitoring/controllers/influxdb/manifest.yaml
+++ b/monitoring/controllers/influxdb/manifest.yaml
@@ -25,8 +25,8 @@
 #       retries: 3
 #   chart:
 #     spec:
-#       chart: influxdb
-#       version: "4.12.5"
+#       chart: influxdb2
+#       version: "2.1.2"
 #       sourceRef:
 #         kind: HelmRepository
 #         name: influxdb
@@ -36,3 +36,12 @@
 #     service:
 #       enabled: true
 #       type: LoadBalancer
+#     adminUser:
+#       organization: "influxdata"
+#       bucket: "default"
+#       user: "admin"
+#       retention_policy: "0s"
+#       ## Leave empty to generate a random password and token.
+#       ## Or fill any of these values to use fixed values.
+#       password: ""
+#       token: ""
