--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - prometheus-claim-secret.yaml
   - alertmanager-claim-secret.yaml
   - grafana-claim-secret.yaml
+  - influxdb-grafana-secret.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
