--- a/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
+++ b/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
@@ -33,6 +33,10 @@ spec:
       interval: 12h
   values:
     statefulset:
+      securityContext:
+        privileged: false
+        capabilities:
+          add: []
       storage:
         enabled: true
         storageClassName: longhorn
