--- a/apps/base/homeassistant/zigbee2mqtt/kustomization.yaml
+++ b/apps/base/homeassistant/zigbee2mqtt/kustomization.yaml
@@ -2,3 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - manifest.yaml
+secretGenerator:
+  - name: zigbee2mqtt-secret
+    files:
+    - values.yaml=values.enc.yaml
+configurations:
+  - kustomizeconfig.yaml
