--- a/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
+++ b/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
@@ -1,68 +1,106 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: zigbee2mqtt
-  namespace: homeassistant
+    name: zigbee2mqtt
+    namespace: homeassistant
 spec:
-  interval: 5m0s
-  url: https://charts.zigbee2mqtt.io
+    interval: 5m0s
+    url: https://charts.zigbee2mqtt.io
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUlNPS29Md0FncmgvTzFt
+            Nkw5SC9NZDBCRUtlSjlnTy9BUlQ5TXY3YkdBCjIzc0tNV2hwdnBsZklTZ0thNlY3
+            SENSeFhvVFhVdm5vZ3A1cGhZc3Jyd3MKLS0tIG9GRnVYaTl4bTc3OTJxZEdGZkF0
+            MFZOY0p5Ynk1aU03aTB5bTF0MUdOYlUKTJTNNSTS0V2uI0pBO6TDRBWZMfyCyLXW
+            YHP42xtrlvslYwpS/pBkzhalpf8KpfFH4YE1VamcpIPjGG0bDYTwCQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-12-27T21:53:01Z"
+    mac: ENC[AES256_GCM,data:obUcX7LqB3dvV4XBZZPpix+Albj6RY1mvyEYfNqbsl9xg0OoRa/UAeBP5O3sj5GOuPT/vzigU8y/lTK19mkL5SH2rIn0PlrWP12uf8mGWn/zISibdz082hfjm6fazcu3zxMS1ha8SFpyM5wK8m8uNDqy/NUIx21uvpXvX3FmGPI=,iv:ZBTlXveyqbIgktP7ICGYXadTk5OG6EWd6BoKSKCJEow=,tag:Mn8+23Y8muGSANifs5vM6w==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: zigbee2mqtt
-  namespace: homeassistant
+    name: zigbee2mqtt
+    namespace: homeassistant
 spec:
-  timeout: 15m
-  interval: 30m
-  install:
-    crds: Create
-    remediation:
-      retries: 3
-  upgrade:
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  chart:
-    spec:
-      chart: zigbee2mqtt
-      sourceRef:
-        kind: HelmRepository
-        name: zigbee2mqtt
-        namespace: homeassistant
-      interval: 12h
-  values:
-    statefulset:
-      securityContext:
-        privileged: false
-        capabilities:
-          add: []
-      storage:
-        enabled: true
-        storageClassName: longhorn
-        size: 1Gi
-      resources:
-        requests:
-          memory: 600Mi
-          cpu: 200m
-        limits:
-          memory: 600Mi
-          cpu: 200m
-    service:
-      type: ClusterIP
-      port: 8080
-    zigbee2mqtt:
-      mqtt:
-        # -- Required: MQTT server URL (use mqtts:// for SSL/TLS connection)
-        server: "mqtt://vernemq.homeassistant.svc.cluster.local:1883"
-        user: homeassistant
-        password:
-          valueFrom:
-            secretKeyRef:
-              name: mqtt-user-credentials
-              key: password
-      serial:
-        port: tcp://192.168.178.29:6638
-        baudrate: 115200
-      advanced:
-        transmit_power: 20
+    timeout: 15m
+    interval: 30m
+    install:
+        crds: Create
+        remediation:
+            retries: 3
+    upgrade:
+        crds: CreateReplace
+        remediation:
+            retries: 3
+    chart:
+        spec:
+            chart: zigbee2mqtt
+            sourceRef:
+                kind: HelmRepository
+                name: zigbee2mqtt
+                namespace: homeassistant
+            interval: 12h
+    values:
+        statefulset:
+            securityContext:
+                privileged: false
+                capabilities:
+                    add: []
+            storage:
+                enabled: true
+                storageClassName: longhorn
+                size: 1Gi
+            resources:
+                requests:
+                    memory: 600Mi
+                    cpu: 200m
+                limits:
+                    memory: 600Mi
+                    cpu: 200m
+        service:
+            type: ClusterIP
+            port: 8080
+        zigbee2mqtt:
+            mqtt:
+                # -- Required: MQTT server URL (use mqtts:// for SSL/TLS connection)
+                server: mqtt://vernemq.homeassistant.svc.cluster.local:1883
+            serial:
+                port: tcp://192.168.178.29:6638
+                baudrate: 115200
+            advanced:
+                transmit_power: 20
+    valuesFrom:
+        - kind: Secret
+          name: zigbee2mqtt-secret
+          valuesKey: values.yaml
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUlNPS29Md0FncmgvTzFt
+            Nkw5SC9NZDBCRUtlSjlnTy9BUlQ5TXY3YkdBCjIzc0tNV2hwdnBsZklTZ0thNlY3
+            SENSeFhvVFhVdm5vZ3A1cGhZc3Jyd3MKLS0tIG9GRnVYaTl4bTc3OTJxZEdGZkF0
+            MFZOY0p5Ynk1aU03aTB5bTF0MUdOYlUKTJTNNSTS0V2uI0pBO6TDRBWZMfyCyLXW
+            YHP42xtrlvslYwpS/pBkzhalpf8KpfFH4YE1VamcpIPjGG0bDYTwCQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-12-27T21:53:01Z"
+    mac: ENC[AES256_GCM,data:obUcX7LqB3dvV4XBZZPpix+Albj6RY1mvyEYfNqbsl9xg0OoRa/UAeBP5O3sj5GOuPT/vzigU8y/lTK19mkL5SH2rIn0PlrWP12uf8mGWn/zISibdz082hfjm6fazcu3zxMS1ha8SFpyM5wK8m8uNDqy/NUIx21uvpXvX3FmGPI=,iv:ZBTlXveyqbIgktP7ICGYXadTk5OG6EWd6BoKSKCJEow=,tag:Mn8+23Y8muGSANifs5vM6w==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
