zigbee2mqtt: specified secret for namespace

--- a/apps/base/homeassistant/zigbee2mqtt/kustomization.yaml
+++ b/apps/base/homeassistant/zigbee2mqtt/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - manifest.yaml
 secretGenerator:
   - name: zigbee2mqtt-secret
+    namespace: homeassistant
     files:
       - values.yaml=values.enc.yaml
 configurations:
