--- a/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
+++ b/apps/base/homeassistant/zigbee2mqtt/manifest.yaml
@@ -54,7 +54,7 @@ spec:
     zigbee2mqtt:
       mqtt:
         # -- Required: MQTT server URL (use mqtts:// for SSL/TLS connection)
-        server: "mqtt://vernemq.homeassistant.svc.cluster.local:1883"
+        server: "mqtt://emqx.homeassistant.svc.cluster.local:1883"
       serial:
         port: tcp://192.168.178.29:6638
         baudrate: 115200
