--- a/monitoring/configs/kustomization.yaml
+++ b/monitoring/configs/kustomization.yaml
@@ -16,6 +16,7 @@ configMapGenerator:
       - dashboards/velero.json
       - dashboards/unbound.json
       - dashboards/proxmox.json
+      - dashboards/emqx.json
       - dashboards/metallb.json
       - dashboards/kube-overview.json
       - dashboards/cert-manager.json
