changed domain syntax

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -41,8 +41,8 @@ spec:
     configMap:
       session:
         cookies:
-          domain: "vandelocht.uk"
-          subdomain: "auth"
+          - domain: "vandelocht.uk"
+          - subdomain: "auth"
       storage:
         local:
           enabled: true
