authelia: changed to deployment

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -38,6 +38,9 @@ spec:
         namespace: authelia
       interval: 12h
   values:
+    pod:
+      kind: Deployment
+      replicas: 1
     configMap:
       session:
         cookies:
