authelia: added cert and ingress
forgot to add to kustomization

--- a/infrastructure/production/authelia/kustomization.yaml
+++ b/infrastructure/production/authelia/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base/authelia
   - users-database.yml
+  - ingressConfig.yaml
 patches:
   - path: patch.yaml
     target:
