--- a/infrastructure/production/authelia/kustomization.yaml
+++ b/infrastructure/production/authelia/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/authelia
-  - users-database.yml
+  - users-database.yaml
   - ingressConfig.yaml
 patches:
   - path: patch.yaml
