authelia: switched to buildin secret for smtp

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -63,14 +63,11 @@ spec:
       storage:
         local:
           enabled: true
-      notifier: 
-        smtp:
-          enabled: true
-          address: 'submission://smtp.purelymail.com:587'
-          username: jan@rethinkmail.com
-          password:
-            path: '/smtp/password.txt'
       authentication_backend: 
         file:
           enabled: true
           path: /configUsers/users_database.yml
+  valuesFrom:
+    - kind: Secret
+      name: smtp-authelia-secret
+      valuesKey: values.yaml
