--- a/infrastructure/base/authelia/kustomization.yaml
+++ b/infrastructure/base/authelia/kustomization.yaml
@@ -2,3 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - manifest.yaml
+secretGenerator:
+  - name: smtp-authelia-secret
+    namespace: authelia
+    files:
+      - values.yaml=values.enc.yaml
+configurations:
+  - kustomizeconfig.yaml
