--- a/infrastructure/base/authelia/values.enc.yaml
+++ b/infrastructure/base/authelia/values.enc.yaml
@@ -1,11 +1,12 @@
 configMap:
     notifier:
         smtp:
-            enabled: ENC[AES256_GCM,data:T+8xAg==,iv:KhsSPBLu8SnMvOce21dpnHXfEyvvSha/xV41icPOZro=,tag:zFhOvuwK75xeuCnsAvTQDw==,type:bool]
-            address: ENC[AES256_GCM,data:JZXw2UBL+9Kwl2nR7UVAFvz3meGyCnbcF3YBnf1Q8fOLJDjO,iv:mgV9DaH4qylQIiTMP7/PlYjX6aNrchG2H/Y71QouD+k=,tag:yRTM0xPedqTZEYCY6M+cUg==,type:str]
-            username: ENC[AES256_GCM,data:e0PYYg8rpw/gjRQffQLcsK6fXg==,iv:pC+uvBX5rBz50eFnt38aszdHPClPi0MvINRqVYPBPEE=,tag:GZTPRI/AAx3Ks4m26LeExw==,type:str]
+            enabled: ENC[AES256_GCM,data:9zCcXw==,iv:uTtlYHpTSsxP782TLiN1kA6LU4vROSErlXT9St0oZkU=,tag:ShYIO2xm1WW8BnBuFxiv7Q==,type:bool]
+            address: ENC[AES256_GCM,data:getAylY5Ws1IkFqUjnJeoqYQ9eY6e7ScgWPhGn2JG/I9VX+c,iv:k2aHbEYxlPbYGiCPxup35RrbhVYcgiab1wRZmJ2n1GM=,tag:rLNZM2wvsxThpUGCHNpUgw==,type:str]
+            username: ENC[AES256_GCM,data:78jSBE2CTkD7Ka1S/amYb2HoYQ==,iv:46qSdaXEWuVa+Skiey18EoBs4kBWhRzWW7LM/aZMj1A=,tag:w5bKmwycnrLfk89Vbkqbhw==,type:str]
+            sender: ENC[AES256_GCM,data:NMbBV07s7IVt/xLWMFqdTJHKaw==,iv:dabXqXJ4Z7twDQwdGKW9mqELMRJDxCfdgPau26UKhdM=,tag:EweqBqLuZZDqgkTmqVgp6A==,type:str]
             password:
-                value: ENC[AES256_GCM,data:k8UVIjAkADiv4e8ezIg19qdho6A=,iv:ci9XQJfy7kvzGJ8da9XBTmPToRFnfSptrfZONCusHGU=,tag:eQI5r++MbIE8D7U7dgzSJQ==,type:str]
+                value: ENC[AES256_GCM,data:s8OZPyzmoPh9Ae7G/h3Fp6E2q4U=,iv:kGbjczf09dntZHsEL47W58s6umZfHtZP4gcHt5qRDC0=,tag:1h8oD52GqTAJaGZyJBsZiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +16,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZcnFQZFV6UXVLVDk5QkJ0
-            RGJ1SVdQREpRdFVMblAwZlVsaVlqNTk4TUNFCmg0a0tWM0l4Skt2RVdUblQ0ODdo
-            Z3JBYXd2aUdLOHpNTWZhUWhBMkVGUHMKLS0tIFlEbGFhNUwxNFErNUFaeC9hRHhU
-            UndIdmhleTFYallrK1ZIamhyR1prQVkKzSoeRY+d3Iy0B62Xa3V765EPzuPq//L6
-            Pkg+ebArCA/5sgyahuIBG0ni0ZWTtLLIb2zliCTSa7spz5Iu2OlhBQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2clJFd2d2amIwamZldnpj
+            eDR5bzVmSzJWemlqeWtyM1dWZGpUL2toZlRFCjBlWEFTS2VGTE1jb3o4WTBXekpZ
+            TmZ2a2RjZEJzRDFkOTJ6Zzg1ZGltTk0KLS0tIFducHhXNmcrNmR4Vk9kdEQrWjRX
+            ZTVwbmJpWDhjNm9KNXFIdGFURzdwSm8KkOuEIgjEpTSMqsLXkomE3NYcHlW9e2zf
+            PqupY0XuIVZnErdgZ7EyyTnmNb+ni4PrpXyNdZ69TuUuGq9CIwYK6w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-03T12:56:32Z"
-    mac: ENC[AES256_GCM,data:aMBHgkJuBtII5k5OLbdDqV8lVr4CnIFlAL1dGR+GKn/vgcPwznLmReYuVCuUZ0ZfMQmG7tWWbnHAbkJa2FGe7Yai9ydByH5j/x3EJc2ypBSIafMRX2AYHpixrNGF+Qr91qMvJADx21ndByg92i5OORsZlLo/3mHS3RI28pp7Tjc=,iv:fj/cpOBOSFaVHognUOqUDlK32lrUHW9NepQ3beIwHzk=,tag:kp61q+77FMIYUuw/sGs06A==,type:str]
+    lastmodified: "2025-01-03T13:10:19Z"
+    mac: ENC[AES256_GCM,data:3mgqp517jJ3q9KbDuJkcZEA2Eo1HQtq3yCLiJRb5pgroNluUVeoa183+dMdX7FghbqK6WbGKZUoLsqJYzqh9hHywtlq4QdILzu5qMhfZBK7Slz6eQT9dbaALJPCiSvNi40CssMYq3Al8qtAP7bG43dzE9HToHhtCAz4TUfumDI8=,iv:f6j7JztnT2OSVqn1cMMMQ4tJqletcgaElBkFlH4hx94=,tag:PZoJKvnSXJympIFLjDTENA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
