authelia: Added rule for longhorn.

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -67,6 +67,10 @@ spec:
         file:
           enabled: true
           path: /configUsers/users_database.yml
+      access_control:
+        rules:
+          - domain: 'longhorn.lan.vandelocht.uk'
+            policy: 'one_factor'
   valuesFrom:
     - kind: Secret
       name: smtp-authelia-secret
