--- a/infrastructure/production/authelia/ingressConfig.yaml
+++ b/infrastructure/production/authelia/ingressConfig.yaml
@@ -17,6 +17,23 @@ spec:
   tls:
     secretName: auth-vandelocht-uk-production-tls
 ---
+apiVersion: 'traefik.containo.us/v1alpha1'
+kind: 'Middleware'
+metadata:
+  name: 'forwardauth-authelia' # name of middleware as it appears in Traefik, and how you reference in ingress rules
+  namespace: 'traefik' # name of namespace that Traefik is in
+  labels:
+    app.kubernetes.io/instance: 'authelia'
+    app.kubernetes.io/name: 'authelia'
+spec:
+  forwardAuth:
+    address: 'http://authelia.authelia.svc.cluster.local/api/authz/forward-auth'
+    authResponseHeaders:
+      - 'Remote-User'
+      - 'Remote-Groups'
+      - 'Remote-Email'
+      - 'Remote-Name'
+---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
