authelia: switched back to integrated ingressroute

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -38,6 +38,10 @@ spec:
         namespace: authelia
       interval: 12h
   values:
+    ingress:
+      enabled: true
+      traefikCRD:
+        enabled: true
     pod:
       kind: Deployment
       replicas: 1
