authelia: defined tls secret
authelia: changed tls secret

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -40,6 +40,9 @@ spec:
   values:
     ingress:
       enabled: true
+      tls:
+        enabled: true
+        secret: 'auth-vandelocht-uk-production-tls'
       traefikCRD:
         enabled: true
     pod:
