authelia: changed traefikCRD config

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -45,6 +45,9 @@ spec:
         secret: 'auth-vandelocht-uk-production-tls'
       traefikCRD:
         enabled: true
+        entryPoints:
+          - websecure
+        disableTLSOptions: true
     pod:
       kind: Deployment
       replicas: 1
